e2e test mod and sum files updated
Also removed comments and printfs, synced build time

--- a/deploy/provider-gcp-plugin.yaml
+++ b/deploy/provider-gcp-plugin.yaml
@@ -36,12 +36,12 @@ kind: ClusterRole
 metadata:
   name: secrets-store-csi-driver-provider-gcp-role
 rules:
-  # - apiGroups:
-  #     - ""
-  #   resources:
-  #     - serviceaccounts/token
-  #   verbs:
-  #     - create
+  - apiGroups:
+      - ""
+    resources:
+      - serviceaccounts/token
+    verbs:
+      - create
   - apiGroups:
       - ""
     resources:
