--- a/charts/secrets-store-csi-driver-provider-gcp/values.yaml
+++ b/charts/secrets-store-csi-driver-provider-gcp/values.yaml
@@ -29,6 +29,7 @@ tolerations: []
 affinity: {}
 
 secrets-store-csi-driver: 
+  fullnameOverride: secrets-store-csi-driver
   tokenRequests:
   - audience: $PROJECT_ID.svc.id.goog
 
