--- a/scripts/cloudbuild-dev.yaml
+++ b/scripts/cloudbuild-dev.yaml
@@ -15,24 +15,28 @@
 # Usage: from the root directory run:
 #
 # $ gcloud builds submit --config scripts/cloudbuild-dev.yaml
-timeout: 2400s
+timeout: 3600s  #increasing timeout else build crashes
 options:
   machineType: N1_HIGHCPU_8
 steps:
 - name: 'gcr.io/cloud-builders/docker'
-  args: ['build', '--tag=asia-east1-docker.pkg.dev/$PROJECT_ID/driver-repo/helm:${_HELM_VERSION}', '--tag=asia-east1-docker.pkg.dev/$PROJECT_ID/driver-repo/helm:latest', '--build-arg', 'HELM_VERSION=v${_HELM_VERSION}', './helm']
-- name: 'gcr.io/cloud-builders/docker'
-  args: ['push', '--all-tags', 'asia-east1-docker.pkg.dev/$PROJECT_ID/driver-repo/helm']
-- name: 'asia-east1-docker.pkg.dev/$PROJECT_ID/driver-repo/helm'
+  args: ['buildx', 'build',
+         '--build-arg',
+         'VERSION=$TAG_NAME',
+         '-t',
+         'asia-east1-docker.pkg.dev/$PROJECT_ID/secrets-store-csi-driver-provider-gcp/helm-image:$TAG_NAME',
+         '--push',
+         './helm']
+- name: 'asia-east1-docker.pkg.dev/$PROJECT_ID/secrets-store-csi-driver-provider-gcp/helm-image:$TAG_NAME'
   args: ['dependency', 'update', './charts/secrets-store-csi-driver-provider-gcp']
   env:
     - SKIP_CLUSTER_CONFIG=true
-- name: 'asia-east1-docker.pkg.dev/$PROJECT_ID/driver-repo/helm'
-  args: ['package', './charts/secrets-store-csi-driver-provider-gcp']
+- name: 'asia-east1-docker.pkg.dev/$PROJECT_ID/secrets-store-csi-driver-provider-gcp/helm-image:$TAG_NAME'
+  args: ['package', './charts/secrets-store-csi-driver-provider-gcp', '--version', '0.1.0-$TAG_NAME']
   env:
     - SKIP_CLUSTER_CONFIG=true
-- name: 'asia-east1-docker.pkg.dev/$PROJECT_ID/driver-repo/helm'
-  args: ['push', 'secrets-store-csi-driver-provider-gcp-0.1.0.tgz', 'oci://asia-east1-docker.pkg.dev/$PROJECT_ID/driver-repo' ]
+- name: 'asia-east1-docker.pkg.dev/$PROJECT_ID/secrets-store-csi-driver-provider-gcp/helm-image:$TAG_NAME'
+  args: ['push', 'secrets-store-csi-driver-provider-gcp-0.1.0-$TAG_NAME.tgz', 'oci://asia-east1-docker.pkg.dev/$PROJECT_ID/secrets-store-csi-driver-provider-gcp' ]
   env:
     - SKIP_CLUSTER_CONFIG=true
 - name: 'gcr.io/cloud-builders/docker'
@@ -43,8 +47,6 @@ steps:
          '--build-arg',
          'VERSION=$TAG_NAME',
          '-t',
-         'gcr.io/$PROJECT_ID/secrets-store-csi-driver-provider-gcp:$TAG_NAME',
+         'asia-east1-docker.pkg.dev/$PROJECT_ID/secrets-store-csi-driver-provider-gcp/provider-image:$TAG_NAME',
          '--push',
          '.']
-substitutions:
-  _HELM_VERSION: 3.12.0
